pamc/src/tests/integration/should_fail/parse/mod.rs
use super::*;

mod check;
mod empty_params;
mod illegal_underscore;
mod labeled_call_args;
mod labeled_params;
mod transparency;
mod visibility;
